--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,9 @@
           <a class="nav-link" routerLink="/home">{{'Nav.Home' | translate}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/world">{{'Nav.World' | translate}}</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/persons">{{'Nav.Persons' | translate}}</a>
         </li>
         <!--li class="nav-item" routerLinkActive="active">
