--- a/src/app/modal/delete-modal/delete-modal.component.html
+++ b/src/app/modal/delete-modal/delete-modal.component.html
@@ -1,5 +1,5 @@
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-outline-secondary celLength delete" data-toggle="modal"
+<button type="button" class="btn btn-outline-secondary celLength delete curve" data-toggle="modal"
         data-target="#deleteModal">
   {{'Modal.Delete.Btn' | translate}}
 </button>
