--- a/src/app/news/news-detail/news-detail.component.html
+++ b/src/app/news/news-detail/news-detail.component.html
@@ -1,13 +1,44 @@
+<hr xmlns="http://www.w3.org/1999/html"/>
 <div class="news-container">
-  <div class="news-image">
-    <a>
-      <img src="../../../assets/images/news/news_paper.png" style="align-content: center;">
-    </a>
-  </div>
-  <div class="news-article">
-    <a>
-      Гроссмейстер Борис Гельфанд даст в Минске сеанс одновременной игры юным шахматистам.
-    </a>
+  <div class="container">
+    <div class="raw">
+      <div class="col-8 centering">
+        <div class="news-title">
+          <h2>{{news.title}}</h2>
+        </div>
+        <div class="news-image">
+          <img src="../../../assets/images/news/{{news.image}}"  class="img-thumbnail">
+        </div>
+        <div class="news-info">
+          <app-news-likes [newsId]="news.id"></app-news-likes>
+          <span class="views">{{news.views}}</span>
+          <app-news-comments-count [newsId]="news.id"></app-news-comments-count>
+        </div>
+        <div class="news-article">
+          <p>{{news.article}}</p>
+        </div>
+        <div class="news-date">{{news.publicationDate}}</div>
+        <div class="news-post">{{news.post}}</div>
+        <app-news-tags [newsId]="news.id"></app-news-tags>
+        <div class="news-author"><span>автор статьи:</span>&nbsp;{{news.person.screenName}}</div>
+        <div class="news-date">{{news.publicationDate}}</div>
+      </div>
+      <hr/>
+      <div class="col-8 centering">
+        <div class="news-comments">
+          <h3>Комментарии</h3>
+        </div>
+        <app-news-comments *ngFor="let comment of comments" [comment]="comment"></app-news-comments>
+        <hr/>
+        <div *ngIf="hasPrivilege" class="card" id="comment">
+          <div class="card-header">
+            <img src="../../../assets/images/persons/{{person.image}}" class="avatar-32">&nbsp;
+            <span class="screen-name" >"{{person.screenName}}"</span>
+            <app-save-modal  class="card-button" [name]="comment" (eventEmitter)="saveComment()"></app-save-modal>
+          </div>
+          <input type="text" class="card-body" placeholder="комментарий" [(ngModel)]="comment">
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-<app-news-info></app-news-info>
