--- a/src/app/persons/person-detail/person-detail.component.html
+++ b/src/app/persons/person-detail/person-detail.component.html
@@ -99,9 +99,9 @@
     </div>
   </h5>
 
-  <!--div id="accordion">
+  <!--div newsId="accordion">
     <div class="card">
-      <div class="card-header" id="headingOne">
+      <div class="card-header" newsId="headingOne">
         <h5 class="mb-0">
           <span>{{'Passports.Details.Passport' | translate}}&nbsp;:</span>
           <a href="passports/detail/{{person.passport.passportId}}">{{person.passport.passportNumber}}</a>
@@ -113,7 +113,7 @@
         </h5>
       </div>
 
-      <div id="collapsePassport" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+      <div newsId="collapsePassport" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
         <div class="card-body">
           <app-passport-detail></app-passport-detail>
         </div>
