--- a/src/app/news/news-detail/news-detail.component.css
+++ b/src/app/news/news-detail/news-detail.component.css
@@ -1,22 +1,95 @@
-.news-container {
-  cursor: pointer;
+.news-container{
   color: #444444;
-}
-
-.news-container:hover {
-  cursor: pointer;
-  color: black;
-}
-
-.news-article {
-  text-align: justify;
-  font-weight: bold;
+  font-size: 120%;
 }
 
 .news-image {
-  text-align: center;
+  float: left;
+  text-align: left;
+  padding-right: 1em;
+  padding-bottom: 1em;
 }
 
 .news-image img {
   border-radius: 0.25em;
+}
+.news-article {
+  font-weight: bold;
+  padding: 1em 1em 0;
+}
+.news-date{
+  text-align: right;
+  font-weight: bold;
+  padding-right: 1em;
+}
+.news-info{
+  text-align: right;
+}
+.views{
+  background: url("../../../assets/images/view.png") no-repeat;
+  padding: 0 1em;
+  display: inline-block;
+  text-align: right;
+  overflow: hidden;
+  vertical-align: middle;
+  width: 4em;
+  background-size: 24px 24px;
+}
+.comments{
+  background: url("../../../assets/images/comment.png") no-repeat;
+  padding: 0 1em;
+  display: inline-block;
+  text-align: right;
+  overflow: hidden;
+  vertical-align: middle;
+  width: 4em;
+  background-size: 24px 24px;
+}
+.like-add{
+  padding: 0 1em;
+  display: inline-block;
+  text-align: right;
+  overflow: hidden;
+  vertical-align: middle;
+  width: 4em;
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+}
+.like-add{
+  background-image: url("../../../assets/images/star.png");
+}
+.like-add:hover{
+  cursor: pointer;
+}
+.news-post{
+  clear: both;
+}
+.news-author{
+  text-align: right;
+  font-weight: bold;
+  padding-right: 1em;
+}
+.news-author span{
+  font-weight: normal;
+}
+.news-comment{
+  margin: 1em 0;
+}
+.card{
+  margin: 1em 0;
+}
+.card-header{
+  height: 38px;
+  padding: 0 0 0 1em;
+}
+.avatar-32{
+  margin-top: 3px;
+}
+.card-button{
+  float: right;
+  border-radius: 0 4px 0 0;
+}
+.card-body{
+  border-color: inherit;
+  border:1px;
 }
