--- a/src/app/news/news-info/news-info.component.css
+++ b/src/app/news/news-info/news-info.component.css
@@ -1,33 +1,38 @@
+.news-container, .news-container a {
+  cursor: pointer;
+  color: #444444;
+  text-decoration: none;
+}
+
+.news-container:hover, .news-container a:hover {
+  cursor: pointer;
+  color: black;
+}
+
+.news-article {
+  text-align: justify;
+  font-weight: bold;
+}
+
+.news-image {
+  text-align: center;
+}
+
+.news-image img {
+  border-radius: 0.25em;
+}
 .news-info{
   text-align: right;
 }
-.likes, .likes-add, .views, .comments{
+.views{
   padding: 0 1em;
   display: inline-block;
   text-align: right;
   overflow: hidden;
   vertical-align: middle;
+  brder: solid 1px green;
   width: 4em;
   background-size: 24px 24px;
   background-repeat: no-repeat;
-}
-.likes{
-  background-image: url("../../../assets/images/star_hollow.png");
-}
-.likes:hover{
-  background-image: url("../../../assets/images/star.png");
-  cursor: pointer;
-}
-.likes-add{
-  background-image: url("../../../assets/images/star.png");
-}
-.likes-add:hover{
-  background-image: url("../../../assets/images/star_hollow.png");
-  cursor: pointer;
-}
-.views{
   background-image: url("../../../assets/images/view.png");
-}
-.comments{
-  background-image: url("../../../assets/images/comment.png");
 }
