--- a/src/app/news/world/world.component.html
+++ b/src/app/news/world/world.component.html
@@ -3,23 +3,8 @@
 <hr/>
 <div class="container">
   <div class="row">
-    <div class="col-sm-3"  *ngFor="let n of news" >
-      <div class="news-container">
-        <div class="news-image">
-          <a>
-            <img src="../../../assets/images/news/{{n.image}}" style="align-content: center;">
-          </a>
-        </div>
-        <div class="news-article">
-          <a>{{n.article}}</a>
-        </div>
-      </div>
-      <div class="news-info">
-        <span class="likes">{{n.likes}}</span>
-        <span class="views">{{n.views}}</span>
-        <app-news-comments-count [id]="n.id"></app-news-comments-count>
-      </div>
-
+    <div class="col-sm-3"  *ngFor="let currentNews of news" >
+      <app-news-info [news]="currentNews" [url]="'/world/detail/'"></app-news-info>
     </div>
   </div>
 </div>
