Login, Comment fix.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,22 @@
-<hr xmlns="http://www.w3.org/1999/html"/>
+<hr/>
+<div>
+  <button (click)="getPerson()">Get person</button>
+</div>
+<div class="container">
+  <div class="raw">
+    <div class="col-8 centering">
+      <h3>
+        <div class="news-author">
+          <a routerLink="/edit/detail/news" class="btn btn-outline-secondary" style="float:left;">
+            Редактировать
+          </a>
+          <span style="color: gray;">автор статьи:</span> Donald
+        </div>
+      </h3>
+    </div>
+  </div>
+</div>
+<hr/>
 <div class="news-container">
   <div class="container">
     <div class="raw">
@@ -9,7 +27,7 @@
           </h2>
         </div>
         <div class="news-image">
-          <img src="../../assets/images/news/heather_nauert-1.jpg"  class="img-thumbnail" alt="Cinque Terre">
+          <img src="../../assets/images/news/heather_nauert-1.jpg" class="img-thumbnail" alt="Cinque Terre">
         </div>
         <div class="news-info">
           <span class="like-add">5</span>
@@ -18,41 +36,54 @@
         </div>
         <div class="news-article">
           <p>
-          Россия и Сирия зачищают места применения боевых отравляющих веществ в населенном пункте Дума близ Дамаска. Это
-          заявила в четверг на регулярном брифинге для журналистов начальник пресс-службы Госдепартамента США Хезер
-          Науэрт.
+            Россия и Сирия зачищают места применения боевых отравляющих веществ в населенном пункте Дума близ Дамаска.
+            Это
+            заявила в четверг на регулярном брифинге для журналистов начальник пресс-службы Госдепартамента США Хезер
+            Науэрт.
           </p>
         </div>
         <div class="news-date">2018-04-11</div>
         <div class="news-post">
           <p>
-          «У нас имеется заслуживающая доверия информация, которая указывает на то, что российские должностные лица
-          работают с сирийским режимом, чтобы затянуть и запретить допуск инспекторов ОЗХО в Думу. Мы считаем, что речь
-          идет об усилиях, направленных на то, чтобы провести их собственные срежиссированные расследования. Как мы
-          считаем, российские должностные лица работали с сирийским режимом, чтобы произвести дезактивацию мест
-          предполагаемых атак и устранить изобличающие свидетельства применения химических вооружений», — заявила
-          представитель внешнеполитического ведомства США.
-          </p><p>
-          «Кроме того, мы наблюдали за тем, как на некоторых людей (из числа местных жителей), казалось, оказывало
-          давление правительство [Сирии], чтобы они поменяли свои показания относительно того, что именно случилось той
-          ночью», — утверждала Науэрт.
-          </p><p>
-          По ее словам, у американских властей имеются данные, полученные от «пользующихся доверием» лиц на месте
-          событий. Эти люди указали, что на них оказывается давление «как Россией, так и Сирией», чтобы добиться
-          изменения показаний по поводу событий 7 апреля, также заявила Науэрт. Такое давление нацелено на то, чтобы
-          больше не складывалось впечатление, что «Россия и Сирия ответственны за эти атаки», в то время как США, «вне
-          всякого сомнения», знают, что «Сирия ответственна за эти атаки», уверяла дипломат.
-          </p><p>
-          Эксперты ОЗХО прибыли в Дамаск еще 14 апреля, однако с тех пор так и не побывали в Думе. 17 апреля сотрудники
-          ООН, которые занимаются обеспечением безопасности миссии Организации по запрещению химического оружия в Сирии,
-          попали под обстрел в городе Дума.
-          </p><p>
-          Напомним, в начале апреля Запад обвинил власти Сирии в химатаке на сирийский город Дума в Восточной Гуте и
-          пригрозил военными ударами. В Генштабе России заявили, что «представители организации „Белые каски“ специально
-          разыграли перед видеокамерами химическую атаку на мирных жителей в сирийском городе Дума». Позже Россия
-          обвинила в постановке Великобританию. В ответ на предполагаемую химатаку США, Великобритания и Франция утром
-          14 апреля нанесли ракетные удары по сирийским правительственным объектам, которые, по их мнению, используются
-          для производства химического оружия.
+            «У нас имеется заслуживающая доверия информация, которая указывает на то, что российские должностные лица
+            работают с сирийским режимом, чтобы затянуть и запретить допуск инспекторов ОЗХО в Думу. Мы считаем, что
+            речь
+            идет об усилиях, направленных на то, чтобы провести их собственные срежиссированные расследования. Как мы
+            считаем, российские должностные лица работали с сирийским режимом, чтобы произвести дезактивацию мест
+            предполагаемых атак и устранить изобличающие свидетельства применения химических вооружений», — заявила
+            представитель внешнеполитического ведомства США.
+          </p>
+          <p>
+            «Кроме того, мы наблюдали за тем, как на некоторых людей (из числа местных жителей), казалось, оказывало
+            давление правительство [Сирии], чтобы они поменяли свои показания относительно того, что именно случилось
+            той
+            ночью», — утверждала Науэрт.
+          </p>
+          <p>
+            По ее словам, у американских властей имеются данные, полученные от «пользующихся доверием» лиц на месте
+            событий. Эти люди указали, что на них оказывается давление «как Россией, так и Сирией», чтобы добиться
+            изменения показаний по поводу событий 7 апреля, также заявила Науэрт. Такое давление нацелено на то, чтобы
+            больше не складывалось впечатление, что «Россия и Сирия ответственны за эти атаки», в то время как США,
+            «вне
+            всякого сомнения», знают, что «Сирия ответственна за эти атаки», уверяла дипломат.
+          </p>
+          <p>
+            Эксперты ОЗХО прибыли в Дамаск еще 14 апреля, однако с тех пор так и не побывали в Думе. 17 апреля
+            сотрудники
+            ООН, которые занимаются обеспечением безопасности миссии Организации по запрещению химического оружия в
+            Сирии,
+            попали под обстрел в городе Дума.
+          </p>
+          <p>
+            Напомним, в начале апреля Запад обвинил власти Сирии в химатаке на сирийский город Дума в Восточной Гуте и
+            пригрозил военными ударами. В Генштабе России заявили, что «представители организации „Белые каски“
+            специально
+            разыграли перед видеокамерами химическую атаку на мирных жителей в сирийском городе Дума». Позже Россия
+            обвинила в постановке Великобританию. В ответ на предполагаемую химатаку США, Великобритания и Франция
+            утром
+            14 апреля нанесли ракетные удары по сирийским правительственным объектам, которые, по их мнению,
+            используются
+            для производства химического оружия.
           </p>
         </div>
         <div class="news-tags">мир, политика</div>
@@ -79,18 +110,18 @@
         <div class="card">
           <div class="card-header">
             <img src="../../assets/images/persons/hamster_head.png" class="avatar-32">&nbsp;
-            <span class="screen-name" >"Quaker"</span>
-              <app-save-modal  class="card-button" [name]="'asdasd'"></app-save-modal>
+            <span class="screen-name">"Quaker"</span>
+            <app-save-modal class="card-button" [name]="'asdasd'"></app-save-modal>
           </div>
-            <input type="text" class="card-body" id="comment"
-                   placeholder="комментарий" style="border-color: inherit; border:1px">
+          <input type="text" class="card-body" id="comment"
+                 placeholder="комментарий" style="border-color: inherit; border:1px">
         </div>
 
         <div class="card" style="margin: 1em 0;">
           <div class="card-header">
             <img src="../../assets/images/persons/hamster_head.png" class="avatar-32">
             <span class="screen-name">"Quaker"</span>
-            <app-delete-modal  class="card-button" [name]="'asdasd'"></app-delete-modal>
+            <app-delete-modal class="card-button" [name]="'asdasd'"></app-delete-modal>
           </div>
           <div class="card-body">
             <blockquote class="blockquote mb-0">
