--- a/src/app/news/news-info/news-info.component.html
+++ b/src/app/news/news-info/news-info.component.html
@@ -1,7 +1,7 @@
 <div class="news-container">
   <div class="news-image">
     <a routerLink="{{url}}{{news.id}}">
-      <img src="../../../assets/images/news/{{news.image}}" class="img-thumbnail" alt="Cinque Terre">
+      <img src="../../../assets/images/news/{{news.image}}" class="img-thumbnail">
     </a>
   </div>
   <div class="news-article">
