--- a/src/app/modal/login-modal/login-modal.component.html
+++ b/src/app/modal/login-modal/login-modal.component.html
@@ -8,8 +8,8 @@
   </div>
 </div>
 <div id="logOutButton" class="login" data-target="#loginModal">
-    <span id="personInfo">{{person.firstName}}&nbsp;{{person.lastName}}&nbsp;&nbsp;</span>
-    <span (click)="logOut()">
+  <span id="personInfo">{{person.firstName}}&nbsp;{{person.lastName}}&nbsp;&nbsp;</span>
+  <span (click)="logOut()">
     <img src="../../../assets/images/persons/{{person.image}}" class="avatar-32">
     {{'Modal.Login.LogOut' | translate}}
   </span>
@@ -36,7 +36,7 @@
             </div>
             <input type="text" class="form-control" id="login"
                    placeholder="{{'Modal.Login.Login' | translate}}"
-                   [(ngModel)]="user.userName">
+                   [(ngModel)]="person.user.userName">
           </div>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
@@ -44,20 +44,18 @@
             </div>
             <input type="password" class="form-control" id="password"
                    placeholder="{{'Modal.Login.Password' | translate}}"
-                   [(ngModel)]="user.password">
+                   [(ngModel)]="person.user.password">
           </div>
           <h6 id="loginError" class="modal-title color" style="display: none; font-size: 60%; color: #5d2222;">
             {{'Modal.Login.Error' | translate}}
           </h6>
           <h6 class="modal-title color" style="font-size: 60%;">
-            Нет аккаунта?&nbsp;
-            <a routerLink="/registration" style="color:#444444;" data-dismiss="modal">Зарегистрироваться.</a>
+            {{'Modal.Login.NoAccount' | translate}}&nbsp;
+            <a routerLink="/registration" style="color:#444444;" data-dismiss="modal">
+              {{'Modal.Login.Register' | translate}}</a>
           </h6>
         </div>
         <div class="modal-footer">
-          <!--button type="button" class="btn btn-dark" data-dismiss="modal" routerLink="/registration">
-            {{'Modal.Login.Register' | translate}}
-          </button-->
           <button type="button" class="btn btn-secondary" data-dismiss="modal">{{'Modal.Close' |
             translate}}
           </button>
