--- a/src/app/news/news-info/news-info.component.css
+++ b/src/app/news/news-info/news-info.component.css
@@ -25,14 +25,13 @@
   text-align: right;
 }
 .views{
+  background: url("../../../assets/images/view.png") no-repeat;
+  background-size: 24px 24px;
   padding: 0 1em;
   display: inline-block;
   text-align: right;
   overflow: hidden;
   vertical-align: middle;
-  brder: solid 1px green;
   width: 4em;
-  background-size: 24px 24px;
-  background-repeat: no-repeat;
-  background-image: url("../../../assets/images/view.png");
 }
+
